--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSW}
-spring.datasource.driver-class-name=org.postgresql.Driver
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.format-sql=true
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST:email-postgres}:${DB_PORT:5432}/${DB_NAME:email_handler}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSW:admin}
+
+server.error.include-stacktrace=never
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -14,3 +12,14 @@ spring.mail.username=${GMAIL_SENDER_USER}
 spring.mail.password=${GMAIL_SENDER_PASSW}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=${RABBITMQ_USER:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=5000
+spring.rabbitmq.listener.simple.retry.max-interval=30000
+spring.rabbitmq.listener.simple.retry.multiplier=3
+
+queue.name=email
